# action-prototype-gen

./: .gitignore  README.md  collection_hopper-hop-v0.csv  new-cheetah-run-v0.npy  new-hopper-hop-v0.npy  pyproject.toml  usage_example.ipynb
actprogen/: effect_based_prototypes.py
src/actprogen/: RGNG_network.py  effect_based_prototypes.py  rgng.py  utils.py
